# sakuraedl-qt

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindLibUSB.cmake  StaticBuild.cmake
qml/: Main.qml  qmldir
qml/components/: DeviceInfoCard.qml  PartitionTable.qml  SideNav.qml
qml/pages/: FastbootPage.qml  MediatekPage.qml  SettingsPage.qml
src/app/: CMakeLists.txt  Main.qml  Theme.qml  app_controller.cpp  app_controller.h  fastboot_controller.cpp  fastboot_controller.h  main.cpp  mediatek_controller.cpp  mediatek_controller.h  qualcomm_controller.cpp  qualcomm_controller.h  spreadtrum_controller.cpp  spreadtrum_controller.h
src/app/components/: FileSelector.qml  LogPanel.qml  ProgressPanel.qml
src/app/pages/: AutoRootPage.qml  QualcommPage.qml  SpreadtrumPage.qml
src/common/: CMakeLists.txt  crc_utils.cpp  crc_utils.h  erofs_parser.cpp  erofs_parser.h  ext4_parser.cpp  ext4_parser.h  gpt_parser.cpp  gpt_parser.h  hdlc_codec.cpp  hdlc_codec.h  lz4_decoder.cpp  lz4_decoder.h  lzma_decoder.cpp  lzma_decoder.h  partition_info.cpp  partition_info.h  sparse_stream.cpp  sparse_stream.h
src/core/: CMakeLists.txt  language_manager.cpp  language_manager.h  logger.cpp  logger.h  performance_config.cpp  performance_config.h  watchdog.cpp  watchdog.h
src/fastboot/: CMakeLists.txt
src/fastboot/parsers/: payload_parser.cpp  payload_parser.h  sparse_image.cpp  sparse_image.h
src/fastboot/protocol/: fastboot_client.cpp  fastboot_client.h  fastboot_protocol.cpp  fastboot_protocol.h
src/fastboot/services/: fastboot_service.cpp  fastboot_service.h
src/mediatek/: CMakeLists.txt
src/mediatek/auth/: cloud_signing_service.cpp  cloud_signing_service.h  mtk_sla_auth.cpp  mtk_sla_auth.h
src/mediatek/database/: mtk_chip_database.cpp  mtk_chip_database.h
src/mediatek/exploit/: brom_exploit_framework.cpp  brom_exploit_framework.h  carbonara_exploit.cpp  carbonara_exploit.h  kamakiri2_exploit.cpp  kamakiri2_exploit.h
src/mediatek/protocol/: brom_client.cpp  brom_client.h  da_loader.cpp  da_loader.h  xflash_client.cpp  xflash_client.h  xml_da_client.cpp  xml_da_client.h
src/mediatek/services/: mediatek_service.cpp  mediatek_service.h
src/qualcomm/: CMakeLists.txt
src/qualcomm/auth/: i_auth_strategy.h  oneplus_auth.cpp  oneplus_auth.h  vip_auth.cpp  vip_auth.h  xiaomi_auth.cpp  xiaomi_auth.h
src/qualcomm/database/: qualcomm_chip_db.cpp  qualcomm_chip_db.h
src/qualcomm/exploit/: pbl_exploit.cpp  pbl_exploit.h
src/qualcomm/parsers/: loader_feature_detector.cpp  loader_feature_detector.h  lp_metadata_parser.cpp  lp_metadata_parser.h  motorola_support.cpp  motorola_support.h  rawprogram_parser.cpp  rawprogram_parser.h
src/qualcomm/protocol/: diag_client.cpp  diag_client.h  firehose_client.cpp  firehose_client.h  sahara_protocol.cpp  sahara_protocol.h
src/qualcomm/services/: cloud_loader_service.cpp  cloud_loader_service.h  provision_service.cpp  provision_service.h  qualcomm_service.cpp  qualcomm_service.h
src/spreadtrum/: CMakeLists.txt
src/spreadtrum/database/: sprd_fdl_database.cpp  sprd_fdl_database.h
src/spreadtrum/exploit/: sprd_exploit.cpp  sprd_exploit.h
src/spreadtrum/parsers/: boot_parser.cpp  boot_parser.h  pac_parser.cpp  pac_parser.h
src/spreadtrum/protocol/: fdl_client.cpp  fdl_client.h  hdlc_protocol.cpp  hdlc_protocol.h  sprd_diag_client.cpp  sprd_diag_client.h
src/spreadtrum/services/: spreadtrum_service.cpp  spreadtrum_service.h
src/transport/: CMakeLists.txt  i_transport.h  port_detector.cpp  port_detector.h  serial_transport.cpp  serial_transport.h  usb_transport.cpp  usb_transport.h  win32_serial_transport.cpp  win32_serial_transport.h
